fix z-index issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -239,3 +239,7 @@ form button:hover {
     transform: translateY(-700px) rotate(600deg);
   }
 }
+
+.link-auth {
+  z-index: 2;
+}
